--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,23 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'com.bmuschko:gradle-tomcat-plugin:2.5'
+    }
+}
+
 plugins {
     id 'java'
     id "groovy"
+    id "war"
 }
 
 apply plugin: 'java'
 apply plugin: 'groovy'
+apply plugin: 'com.bmuschko.tomcat'
+apply plugin: 'war'
 
 group 'GIdWonsz'
 version '1.0-SNAPSHOT'
@@ -15,6 +28,21 @@ repositories {
     mavenCentral()
 }
 
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    providedCompile 'javax.servlet::javax.servlet-api:3.1.0'
+
+    def tomcatVersion = '9.0.10'
+    tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}",
+            "org.apache.tomcat.embed:tomcat-embed-logging-juli:9.0.0.M6",
+            "org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}"
 }
+
+tomcat {
+    httpProtocol = 'org.apache.coyote.http11.Http11Nio2Protocol'
+    ajpProtocol  = 'org.apache.coyote.ajp.AjpNio2Protocol'
+}
+
+tomcatRun.contextPath = '/'
+tomcatRunWar.contextPath = '/'
