--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,17 @@ buildscript {
     }
 }
 
+buildscript {
+    repositories {
+        maven {
+            url 'http://dl.bintray.com/cjstehno/public'
+        }
+    }
+    dependencies {
+        classpath 'gradle-templates:gradle-templates:1.4.1'
+    }
+}
+
 plugins {
     id 'java'
     id "groovy"
@@ -18,6 +29,7 @@ apply plugin: 'java'
 apply plugin: 'groovy'
 apply plugin: 'com.bmuschko.tomcat'
 apply plugin: 'war'
+apply plugin:'templates'
 
 group 'GIdWonsz'
 version '1.0-SNAPSHOT'
