--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ plugins {
 }
 
 apply plugin: 'java'
+apply plugin: "java-library"
 apply plugin: 'groovy'
 apply plugin: 'com.bmuschko.tomcat'
 apply plugin: 'war'
@@ -35,6 +36,7 @@ group 'GIdWonsz'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -43,7 +45,7 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    providedCompile 'javax.servlet::javax.servlet-api:3.1.0'
+    providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
 
     def tomcatVersion = '9.0.10'
     tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}",
