Podejście do webApp - HelloWebApp prawie działa. Przy Tomcat ważne jest dobre ustawienie zmiennych środowiskowych(systemowych), można sobie przetestować, czy działa wywołując z cmd version.bat albo startup.bat. Task tomcatRun się zacina, cały czas jest w statusie "running" albo "executing". Aktualny stan HelloWebApp - wyrzuca Method not allowed przy wejściu na stronę/serwer.

--- a/build.gradle
+++ b/build.gradle
@@ -8,35 +8,34 @@ buildscript {
     }
 }
 
-buildscript {
-    repositories {
-        maven {
-            url 'http://dl.bintray.com/cjstehno/public'
-        }
-    }
-    dependencies {
-        classpath 'gradle-templates:gradle-templates:1.4.1'
-    }
-}
+//buildscript {
+//    repositories {
+//        maven {
+//            url 'http://dl.bintray.com/cjstehno/public'
+//        }
+//    }
+//    dependencies {
+//        classpath 'gradle-templates:gradle-templates:1.4.1'
+//    }
+//}
 
 plugins {
     id 'java'
-    id "groovy"
+//    id "groovy"
     id "war"
 }
 
 apply plugin: 'java'
 apply plugin: "java-library"
-apply plugin: 'groovy'
+//apply plugin: 'groovy'
 apply plugin: 'com.bmuschko.tomcat'
 apply plugin: 'war'
-apply plugin:'templates'
+//apply plugin:'templates'
 
 group 'GIdWonsz'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
-targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -60,3 +59,4 @@ tomcat {
 
 tomcatRun.contextPath = '/'
 tomcatRunWar.contextPath = '/'
+
