--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-<!DOCTYPE web-app
-    PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
-    "http://java.sun.com/dtd/web-app_2_3.dtd">
+<!--<!DOCTYPE web-app-->
+    <!--PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"-->
+    <!--"http://java.sun.com/dtd/web-app_2_3.dtd">-->
 
 <web-app>
+   <servlet>
+      <servlet-name>hello</servlet-name>
+      <servlet-class>HelloWebApp.HelloWebApp</servlet-class>
+   </servlet>
+
+   <servlet-mapping>
+      <servlet-name>hello</servlet-name>
+      <url-pattern>/test</url-pattern>
+   </servlet-mapping>
+
    <!-- General description of your web application -->
    <display-name>Wonsz - Webapp</display-name>
       <description>
