--- a/build.gradle
+++ b/build.gradle
@@ -23,23 +23,25 @@ plugins {
     id 'java'
 //    id "groovy"
     id "war"
-    id 'org.jetbrains.kotlin.jvm' version '1.2.60'
 }
 
-apply plugin: 'java'
-apply plugin: "java-library"
-//apply plugin: 'groovy'
+//apply plugin: 'java'
+//apply plugin: "java-library"
 apply plugin: 'com.bmuschko.tomcat'
-apply plugin: 'war'
+//apply plugin: 'war'
 apply plugin:'templates'
+
 
 group 'GIdWonsz'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
 
-repositories {
-    mavenCentral()
+allprojects{
+    repositories {
+        mavenCentral()
+        jcenter()
+    }
 }
 
 
@@ -51,8 +53,6 @@ dependencies {
     tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}",
             "org.apache.tomcat.embed:tomcat-embed-logging-juli:9.0.0.M6",
             "org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}"
-
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
 tomcat {
@@ -62,15 +62,3 @@ tomcat {
 
 tomcatRun.contextPath = '/'
 tomcatRunWar.contextPath = '/'
-
-compileKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
-compileTestKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
-
